// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ani-Yay Table should render table component with no value 1`] = `
<div>
  <table
    class="table table-striped table-bordered table-hover"
  >
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th>
          Description
        </th>
        <th>
          Status
        </th>
        <th>
          Type
        </th>
        <th>
          Popularity
        </th>
      </tr>
    </thead>
    <tbody />
  </table>
</div>
`;

exports[`Ani-Yay Table should render the table with a few values 1`] = `
<div>
  <table
    class="table table-striped table-bordered table-hover"
  >
    <thead>
      <tr>
        <th>
          Title
        </th>
        <th>
          Description
        </th>
        <th>
          Status
        </th>
        <th>
          Type
        </th>
        <th>
          Popularity
        </th>
      </tr>
    </thead>
    <tbody>
      <tr>
        <td>
          Woo
        </td>
        <td>
          I am a description
        </td>
        <td>
          CANCELLED
        </td>
        <td>
          ANIME
        </td>
        <td>
          5
        </td>
      </tr>
      <tr>
        <td>
          Nice
        </td>
        <td>
          I am a description
        </td>
        <td>
          CANCELLED
        </td>
        <td>
          ANIME
        </td>
        <td>
          5
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
